[gd_scene load_steps=5 format=3 uid="uid://dvf208lbb65hl"]

[ext_resource type="Script" uid="uid://byjj4eak3hshb" path="res://weapon_manager/player_hud/player_hud.gd" id="1_lvhxl"]
[ext_resource type="Texture2D" uid="uid://bwa4fmn61ois3" path="res://weapon_manager/player_hud/crosshair/cross.png" id="2_im738"]
[ext_resource type="Script" uid="uid://oa2wqehjpplg" path="res://weapon_manager/player_hud/speed.gd" id="3_w7q74"]
[ext_resource type="Script" uid="uid://b4gdt43l4bapw" path="res://weapon_manager/player_hud/fps.gd" id="4_vgly4"]

[node name="PlayerHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_lvhxl")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("2_im738")

[node name="DebugInfo" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Speed" type="Label" parent="DebugInfo"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -183.0
offset_top = 86.0
offset_right = -61.0
offset_bottom = 109.0
grow_horizontal = 0
text = "Speed: 0.0 m/s"
script = ExtResource("3_w7q74")

[node name="FPS" type="Label" parent="DebugInfo"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -169.0
offset_top = 60.0
offset_right = -105.0
offset_bottom = 83.0
grow_horizontal = 0
text = "FPS: 000.0"
script = ExtResource("4_vgly4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -123.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HealthBox" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/HealthBox"]
layout_mode = 0
offset_left = 15.0
offset_top = 44.0
offset_right = 71.0
offset_bottom = 67.0
text = "Health:"

[node name="HealthLabel" type="Label" parent="MarginContainer/HBoxContainer/HealthBox"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 98.0
offset_top = 16.0
offset_right = 160.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 36
text = "100"

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AmmoBox" type="Panel" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/AmmoBox"]
layout_mode = 0
offset_left = 20.0
offset_top = 48.0
offset_right = 76.0
offset_bottom = 71.0
text = "Ammo:"

[node name="AmmoLabel" type="Label" parent="MarginContainer/HBoxContainer/AmmoBox"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 114.0
offset_top = 18.0
offset_right = 155.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 36
text = "99"

[node name="MessagePanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = 126.0
offset_right = 23.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageLabel" type="RichTextLabel" parent="MessagePanel"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0
